--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="Password">password</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_user_registration">User Registration</string>
 
 </resources>
